<resources>
    <string name="app_name">GameClicking</string>

    <!-- authentication screen -->
    <string name="label_welcome">Welcome to game</string>
    <string name="label_bottom_title">Sign in and go to the application!</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="text_register">Register</string>
    <string name="text_terms">By clicking Register you agree to our Terms and Conditions</string>
    <string name="text_question">Still don`t have an account?</string>
    <string name="text_signIn">Sign in</string>
    <string name="button_google" translatable="false">Google</string>

    <!-- register screen -->
    <string name="label_fill">Fill out the profile</string>
    <string name="label_again_password">Again password</string>
    <string name="label_name">Full name</string>
    <string name="text_cancel">Cancel</string>

    <!-- navigation menu -->
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>

    <!-- Errors -->
    <string name="error_email">Wrong format</string>
    <string name="error_password">Unreliable password.Use upper and lower case, digits, sign</string>
    <string name="error_password_same">Passwords are different</string>
    <string name="error_date_format">Incorrect date format</string>

    <!-- Toast message -->
    <string name="message_successfully">Successfully</string>
    <string name="label_hotel">Hotel</string>
    <string name="text_close_bar">Close bar</string>
    <string name="text_app_name">GameClick</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_menu">Menu</string>
    <string name="label_play">Play</string>
    <string name="label_shop">Shop</string>
    <string name="label_exit">Exit</string>
    <string name="label_choose_skin">Choose skin:</string>
    <string name="label_choose_background">Choose background:</string>
    <string name="label_stop">Stop</string>
    <string name="label_result">Result</string>
    <string name="label_your_score">Your score:</string>
    <string name="label_total_score">Total score:</string>
    <string name="label_available_images">Available images</string>
    <string name="label_price">Price:</string>
</resources>