<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_blue">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:text="@string/label_welcome"
        android:textColor="@color/profile_title"
        android:textSize="@dimen/size_title_text"
        android:theme="@style/HeaderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelBottomTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/label_bottom_title"
        android:textColor="@color/profile_title"
        android:textSize="@dimen/size_bottom_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelEmail"
        style="@style/LabelLightStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelBottomTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editEmail"
        style="@style/InputFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:labelFor="@id/labelEmail"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelPassword"
        style="@style/LabelLightStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        style="@style/InputFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textPassword"
        android:labelFor="@id/labelPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintVertical_bias="0.2"
        app:strokeWidth="@dimen/stroke_width" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/text_terms"
        android:textAlignment="center"
        android:textColor="@color/profile_title"
        android:textSize="@dimen/size_bottom_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/text_question"
        android:textColor="@color/text_job"
        android:textSize="@dimen/size_job_text"
        app:layout_constraintBottom_toBottomOf="@id/buttonRegisterUser"
        app:layout_constraintEnd_toStartOf="@id/buttonRegisterUser"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelTerms" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegisterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/btn_outline"
        android:fontFamily="@font/opensans_semibold"
        android:padding="@dimen/small_padding"
        android:text="@string/text_register"
        android:textColor="@color/light"
        android:textSize="@dimen/size_job_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelQuestion"
        app:layout_constraintTop_toBottomOf="@id/labelTerms" />
</androidx.constraintlayout.widget.ConstraintLayout>