<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_blue">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:text="@string/label_menu"
        android:textColor="@color/profile_title"
        android:textSize="@dimen/size_title_text"
        android:theme="@style/HeaderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlay"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:text="@string/label_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeader" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonShop"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:text="@string/label_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPlay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExit"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:text="@string/label_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonShop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelChooseSkin"
        style="@style/LabelLightStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_skin"
        app:layout_constraintStart_toStartOf="@id/buttonExit"
        app:layout_constraintTop_toBottomOf="@id/buttonExit" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/editTypeSkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@color/text_job"
        android:fontFamily="@font/opensans_semibold"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:textColor="@color/item_name_color"
        android:textSize="@dimen/size_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelChooseSkin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelChooseBackground"
        style="@style/LabelLightStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_background"
        app:layout_constraintStart_toStartOf="@id/labelChooseSkin"
        app:layout_constraintTop_toBottomOf="@id/editTypeSkin" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/editChooseBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@color/text_job"
        android:fontFamily="@font/opensans_semibold"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:textColor="@color/item_name_color"
        android:textSize="@dimen/size_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelChooseBackground" />
</androidx.constraintlayout.widget.ConstraintLayout>